# File-Summarizing-Agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
app/: config.py  ui.py
app/agents/: graph.py  state.py
app/server/: auth.py
app/tools/: auth.py  g_drive.py  parse.py  summarize.py
app/utils/: logger.py
